[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "relayport-types"
version = "0.4.0"
description = "Pydantic types for RelayPort — webhook payloads and relay API"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.0,<3"]
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["."]
include = ["relayport_types*"]

[tool.setuptools.package-data]
relayport_types = ["py.typed"]
